@@ -4,6 +4,7 @@
   * Added #navigation_method to Accessors to gather method name to use with navigation
   * Added #navigate_to method to PageFactory to navigate to a page through previous pages
   * Added routes to PageFactory to collect routes through the site
+  * Added #continue_navigation_to method to PageFactory which begins at @current_page
 ******1.1.0******
 === 2016-11-14
 * Enhancements
